# bazel-quarkus-test

./: .bazelrc  .gitignore  BUILD  MODULE.bazel
src/main/java/org/acme/getting/started/: GreetingService.java
src/main/resources/: application.properties
src/test/java/org/acme/getting/started/: GreetingResourceTest.java
